--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <section class="skill">
             <div class="skill-inner">
                 <span class="iconify" data-icon="logos:nodejs" data-inline="false"></span>
-                <h3>Node.JS</h3>
+                <h3>Node.js</h3>
                 <p class="text">
                     Node.js is an open-source, cross-platform, JavaScript runtime environment that executes JavaScript
                     code outside of a browser
@@ -173,7 +173,7 @@
                     <div class="foreground">
                         <ul>
                             <li>JavaScript</li>
-                            <li>Vue.JS</li>
+                            <li>Vue.js</li>
                         </ul>
                     </div>
                     <img src="./assets/workimg/analysis_web.webp">
@@ -190,7 +190,7 @@
                     <div class="foreground">
                         <ul>
                             <li>TypeScript</li>
-                            <li>Express.JS</li>
+                            <li>Express.js</li>
                             <li>MongoDB</li>
                         </ul>
                     </div>
@@ -243,7 +243,7 @@
                     <div class="foreground">
                         <ul>
                             <li>JavaScript</li>
-                            <li>Vue.JS</li>
+                            <li>Vue.js</li>
                         </ul>
                     </div>
                     <img src="./assets/workimg/oktw_live_records.webp">
