--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <header id="about-wrapper" class="page about-wrapper">
         <div class="about-outer">
             <div class="about-inner">
-                <img class="avatar" src="https://www.gravatar.com/avatar/6ac7dce05f1985234a0ef26bc97c8ab2?s=512" />
+                <img class="avatar" alt=""
+                    src="https://www.gravatar.com/avatar/6ac7dce05f1985234a0ef26bc97c8ab2?s=512" />
                 <h1>WoodMan</h1>
                 <p class="links">
                     <a href="https://blog.woodman.pw"><button class="button">Blog</button></a>
@@ -176,7 +177,7 @@
                             <li>Vue.js</li>
                         </ul>
                     </div>
-                    <img src="./assets/workimg/analysis_web.webp">
+                    <img alt="" src="./assets/workimg/analysis_web.webp">
                     <h3>Analysis Bot Website</h3>
                     <p class="text">
                         Analysis discord voice online status.
@@ -194,7 +195,7 @@
                             <li>MongoDB</li>
                         </ul>
                     </div>
-                    <img src="./assets/workimg/analysis_bot.webp">
+                    <img alt="" src="./assets/workimg/analysis_bot.webp">
                     <h3>Analysis Bot</h3>
                     <p class="text">
                         Record discord voice online status and web backen.
@@ -212,7 +213,7 @@
                             <li>CSS</li>
                         </ul>
                     </div>
-                    <img src="./assets/workimg/website.webp">
+                    <img alt="" src="./assets/workimg/website.webp">
                     <h3>Website</h3>
                     <p class="text">
                         About me <br>
@@ -229,7 +230,7 @@
                             <li>File maintenance</li>
                         </ul>
                     </div>
-                    <img src="./assets/workimg/oktw_network.webp">
+                    <img alt="" src="./assets/workimg/oktw_network.webp">
                     <h3>OKTW Offical Site</h3>
                     <p class="text">
                         Contributions: Wiki and News.
@@ -246,7 +247,7 @@
                             <li>Vue.js</li>
                         </ul>
                     </div>
-                    <img src="./assets/workimg/oktw_live_records.webp">
+                    <img alt="" src="./assets/workimg/oktw_live_records.webp">
                     <h3>OKTW Live Records Site</h3>
                     <p class="text">
                         Contributions: Function development.
@@ -273,7 +274,7 @@
         <h3>About this page</h3>
         <p>
             <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
-                <img alt="創用 CC 授權條款" style="border-width:0"
+                <img alt="" alt="創用 CC 授權條款" style="border-width:0"
                     src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png">
             </a>
             <br>
