--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
                         <ul>
                             <li>JavaScript</li>
                             <li>Vue.js</li>
+                            <li>Axios</li>
                         </ul>
                     </div>
                     <img alt="" src="./assets/workimg/analysis_web.webp">
@@ -218,22 +219,6 @@
                     <p class="text">
                         About me <br>
                         You are currently watching this.
-                    </p>
-                </div>
-            </a>
-        </section>
-        <section class="work">
-            <a href="https://github.com/OKTW-Network/mc.oktw.one">
-                <div class="work-inner">
-                    <div class="foreground">
-                        <ul>
-                            <li>File maintenance</li>
-                        </ul>
-                    </div>
-                    <img alt="" src="./assets/workimg/oktw_network.webp">
-                    <h3>OKTW Offical Site</h3>
-                    <p class="text">
-                        Contributions: Wiki and News.
                     </p>
                 </div>
             </a>
