Change image to png

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                             <li>Axios</li>
                         </ul>
                     </div>
-                    <img alt="" src="./assets/workimg/analysis_web.webp">
+                    <img alt="" src="./assets/workimg/analysis_web.png">
                     <h3>Analysis Bot Website</h3>
                     <p class="text">
                         Analysis discord voice online status.
@@ -196,7 +196,7 @@
                             <li>MongoDB</li>
                         </ul>
                     </div>
-                    <img alt="" src="./assets/workimg/analysis_bot.webp">
+                    <img alt="" src="./assets/workimg/analysis_bot.png">
                     <h3>Analysis Bot</h3>
                     <p class="text">
                         Record discord voice online status and web backen.
@@ -214,7 +214,7 @@
                             <li>CSS</li>
                         </ul>
                     </div>
-                    <img alt="" src="./assets/workimg/website.webp">
+                    <img alt="" src="./assets/workimg/website.png">
                     <h3>Website</h3>
                     <p class="text">
                         About me <br>
@@ -232,7 +232,7 @@
                             <li>Vue.js</li>
                         </ul>
                     </div>
-                    <img alt="" src="./assets/workimg/oktw_live_records.webp">
+                    <img alt="" src="./assets/workimg/oktw_live_records.png">
                     <h3>OKTW Live Records Site</h3>
                     <p class="text">
                         Contributions: Function development.
