Add telegram to contact

--- a/index.html
+++ b/index.html
@@ -253,6 +253,15 @@
                 </a>
             </h3>
         </section>
+        <section class="contact-method telegram">
+            <h3>
+                <a href="https://t.me/as2174">
+                    <span class="iconify" data-icon="cib:telegram" data-inline="false"></span>
+                    <br>
+                    Telegram
+                </a>
+            </h3>
+        </section>
     </section>
 
     <footer id="copyright" class="page footer copyright">
