--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.min.css" rel="stylesheet"
         type="text/css" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162031144-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-162031144-2');
+    </script>
     <script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
 </head>
 
