--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>WoodMan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Personal profile of WoodMan, a wood from Taiwan who loves writing codes." />
-    <meta property="og:url" content="https://woodman.pw">
+    <meta property="og:url" content="https://woodman.tw">
     <meta property="og:title" content="WoodMan">
     <meta property="og:image" content="https://www.gravatar.com/avatar/6ac7dce05f1985234a0ef26bc97c8ab2?s=512">
     <meta property="og:type" content="website">
@@ -26,7 +26,7 @@
                     src="https://www.gravatar.com/avatar/6ac7dce05f1985234a0ef26bc97c8ab2?s=512" />
                 <h1>WoodMan</h1>
                 <p class="links">
-                    <a href="https://blog.woodman.pw"><button class="button">Blog</button></a>
+                    <a href="https://blog.woodman.tw"><button class="button">Blog</button></a>
                 </p>
                 <p class="cursor target">
                     HI! i'm WoodMan,
@@ -169,7 +169,7 @@
     <section id="works" class="page works">
         <h2>Works</h2>
         <section class="work">
-            <a href="https://analysis.woodman.pw">
+            <a href="https://analysis.woodman.tw">
                 <div class="work-inner">
                     <div class="foreground">
                         <ul>
@@ -273,7 +273,7 @@
             </a>
             <br>
             除另有註明，網站之內容皆由
-            <a class="link" rel="author" href="https://woodman.pw">
+            <a class="link" rel="author" href="https://woodman.tw">
                 WoodMan
             </a>
             製作，以
