--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <img alt="" src="./assets/workimg/analysis_bot.png">
                     <h3>Analysis Bot</h3>
                     <p class="text">
-                        Record discord voice online status and web backen.
+                        Record discord voice online status and web backend.
                     </p>
                 </div>
             </a>
