[Test] Fix blog url

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     src="https://www.gravatar.com/avatar/6ac7dce05f1985234a0ef26bc97c8ab2?s=512" />
                 <h1>WoodMan</h1>
                 <p class="links">
-                    <a href="https://blog.woodman.tw"><button class="button">Blog</button></a>
+                    <a href="https://blog.woodman.tw/"><button class="button">Blog</button></a>
                 </p>
                 <p class="cursor target">
                     HI! i'm WoodMan,
