--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <h3>Node.js</h3>
                 <p class="text">
                     Node.js is an open-source, cross-platform, JavaScript runtime environment that executes JavaScript
-                    code outside of a browser
+                    code outside of a browser.
                 </p>
                 <div class="progress" style="width: 80%;"></div>
             </div>
@@ -112,13 +112,12 @@
         </section>
         <section class="skill">
             <div class="skill-inner">
-                <span class="iconify" data-icon="logos-c-sharp" data-inline="false"></span>
-                <h3>C#</h3>
+                <span class="iconify" data-icon="logos:kotlin" data-inline="false"></span>
+                <h3>Kotlin</h3>
                 <p class="text">
-                    C# is a general-purpose, multi-paradigm programming language encompassing strong typing, lexically
-                    scoped
+                    Kotlin is a cross-platform, statically typed, general-purpose programming language with type inference.
                 </p>
-                <div class="progress" style="width: 45%;"></div>
+                <div class="progress" style="width: 25%;"></div>
             </div>
         </section>
         <section class="skill">
@@ -144,6 +143,16 @@
         </section>
         <section class="skill">
             <div class="skill-inner">
+                <span class="iconify" data-icon="logos:docker" data-inline="false"></span>
+                <h3>Docker</h3>
+                <p class="text">
+                    Docker is a set of platform as a service (PaaS) products that use OS-level virtualization to deliver software in packages called containers.
+                </p>
+                <div class="progress" style="width: 30%;"></div>
+            </div>
+        </section>
+        <section class="skill">
+            <div class="skill-inner">
                 <span class="iconify" data-icon="logos:git" data-inline="false"></span>
                 <h3>Git</h3>
                 <p class="text">
@@ -162,6 +171,16 @@
                     delivery.
                 </p>
                 <div class="progress" style="width: 70%;"></div>
+            </div>
+        </section>
+        <section class="skill">
+            <div class="skill-inner">
+                <span class="iconify" data-icon="flat-color-icons:linux" data-inline="false"></span>
+                <h3>Linux</h3>
+                <p class="text">
+                    Linux is a family of open source Unix-like operating systems based on the Linux kernel.
+                </p>
+                <div class="progress" style="width: 90%;"></div>
             </div>
         </section>
     </section>
