--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>WoodMan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Personal profile of WoodMan, a wood from Taiwan who loves writing codes." />
-    <meta property="og:url" content="https://woodman.tw">
-    <meta property="og:title" content="WoodMan">
-    <meta property="og:image" content="https://www.gravatar.com/avatar/6ac7dce05f1985234a0ef26bc97c8ab2?s=512">
-    <meta property="og:type" content="website">
-    <meta property="og:description" content="Personal profile of WoodMan, a wood from Taiwan who loves writing codes.">
+    <meta property="og:url" content="https://woodman.tw" />
+    <meta property="og:title" content="WoodMan" />
+    <meta property="og:image" content="https://www.gravatar.com/avatar/6ac7dce05f1985234a0ef26bc97c8ab2?s=512" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Personal profile of WoodMan, a wood from Taiwan who loves writing codes." />
     <link rel="icon" type="image/png" href="assets/favicon.png" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.min.css" rel="stylesheet"
         type="text/css" />
