--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <p class="links">
                     <a href="https://blog.woodman.tw/"><button class="button">Blog</button></a>
                 </p>
+                <!-- 由 mmis1000 製作-->
                 <p class="cursor target">
                     HI! i'm WoodMan,
                     <!-- $setTypeInterval 500 -->
