--- a/index.html
+++ b/index.html
@@ -275,10 +275,19 @@
         </section>
         <section class="contact-method telegram">
             <h3>
-                <a href="https://t.me/as2174">
+                <a href="https://t.me/WoodMan_notes">
                     <span class="iconify" data-icon="cib:telegram" data-inline="false"></span>
                     <br>
-                    Telegram
+                    Notes
+                </a>
+            </h3>
+        </section>
+        <section class="contact-method telegram">
+            <h3>
+                <a href="https://blog.woodman.tw">
+                    <span class="iconify" data-icon="carbon:blog" data-inline="false"></span>
+                    <br>
+                    Blog
                 </a>
             </h3>
         </section>
