--- a/index.html
+++ b/index.html
@@ -260,6 +260,42 @@
                 </div>
             </a>
         </section>
+        <section class="work">
+            <a href="https://github.com/jimchen5209/PixivWallpaperHelper">
+                <div class="work-inner">
+                    <div class="foreground">
+                        <ul>
+                            <li>C#</li>
+                        </ul>
+                    </div>
+                    <img alt="" src="./assets/workimg/pixivwallpaperhelper.png">
+                    <h3>Pixiv Wallpaper Helper</h3>
+                    <p class="text">
+                        Contributions: Idea provision <br>
+                        Pixiv function development.
+                    </p>
+                </div>
+            </a>
+        </section>
+        <section class="work">
+            <a href="https://github.com/OKTW-Network">
+                <div class="work-inner">
+                    <div class="foreground">
+                        <ul>
+                            <li>Java</li>
+                            <li>Kotlin</li>
+                            <li>CI/CD</li>
+                        </ul>
+                    </div>
+                    <img alt="" src="./assets/workimg/ON.png">
+                    <h3>OKTW - Contributor</h3>
+                    <p class="text">
+                        Contributions: Plug-in, CI/CD <br>
+                        development and maintenance
+                    </p>
+                </div>
+            </a>
+        </section>
     </section>
 
     <section id="contact" class="page contact">
