--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
         type="text/css" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162031144-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-162031144-2');
+    </script>
 </head>
 
 <body>
