--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <h1>WoodMan</h1>
                 <p class="links">
                     <a href="https://blog.woodman.tw/"><button class="button">Blog</button></a>
+                    <a href="./resume/"><button class="button">Resume</button></a>
                 </p>
                 <!-- 由 mmis1000 製作-->
                 <p class="cursor target">
