Modify project content

--- a/resume/index.html
+++ b/resume/index.html
@@ -85,7 +85,7 @@
                 <ul>
                     <li><a href="https://github.com/WoodManGitHub/MyWeb" target="_blank">Personal Website</a> - <a href="https://woodman.tw/">Link</a> - 個人網頁</li>
                     <li><a href="https://github.com/WoodManGitHub/Analysis_Bot" target="_blank">Analysis Bot API</a> - 記錄並分析 Discord 使用者的上下線時間</li>
-                    <li><a href="https://github.com/WoodManGitHub/Analysis_Bot_Web">Analysis Bot Website</a> - <a href="https://analysis.woodman.tw/">Link</a> - 將 API 資料視覺化</li>
+                    <li><a href="https://github.com/WoodManGitHub/Analysis_Bot_Web">Analysis Bot Website</a> - <a href="https://analysis.woodman.tw/">Link</a> - 存取 API 並將資料視覺化</li>
                 </ul>
             </dd>
             <dd class="clear"></dd>
