Add Competition experience

--- a/resume/index.html
+++ b/resume/index.html
@@ -89,6 +89,20 @@
                 </ul>
             </dd>
             <dd class="clear"></dd>
+
+            <dt>競賽經歷</dt>
+            <dd>
+                <h2>開發競賽</h2>
+                <ul>
+                    <li>Google Code-In 2017</li>
+                </ul>
+
+                <h2>資訊安全競賽</h2>
+                <ul>
+                    <li><a href="https://ctf2020.hitcon.org/" target="_blank">HTICON CTF 2020</a></li>
+                </ul>
+            </dd>
+            <dd class="clear"></dd>
         </dl>
         <div class="clear"></div>
     </div>
