refactor: Update Web
Remove unsed file and Convert png to webp

--- a/index.html
+++ b/index.html
@@ -194,6 +194,26 @@
                 <div class="progress" style="width: 80%;"></div>
             </div>
         </section>
+        <section class="skill">
+            <div class="skill-inner">
+                <span class="iconify" data-icon="twemoji:triangular-flag" data-inline="false"></span>
+                <h3>Penetration Testing</h3>
+                <p class="text">
+                    A penetration test, is an authorized simulated cyberattack on a computer system, performed to evaluate the security of the system.
+                </p>
+                <div class="progress" style="width: 60%;"></div>
+            </div>
+        </section>
+        <section class="skill">
+            <div class="skill-inner">
+                <span class="iconify" data-icon="jam:refresh-reverse" data-inline="false"></span>
+                <h3>Reverse Engineering</h3>
+                <p class="text">
+                    Reverse Engineering is a process of recovering the design, requirement specifications, and functions of a product from an analysis of its code.
+                </p>
+                <div class="progress" style="width: 10%;"></div>
+            </div>
+        </section>
     </section>
 
     <section id="works" class="page works">
@@ -208,7 +228,7 @@
                             <li>Axios</li>
                         </ul>
                     </div>
-                    <img alt="" src="./assets/workimg/analysis_web.png">
+                    <img alt="" src="./assets/workimg/analysis_web.webp">
                     <h3>Analysis Bot Website</h3>
                     <p class="text">
                         Analysis discord voice online status.
@@ -226,7 +246,7 @@
                             <li>MongoDB</li>
                         </ul>
                     </div>
-                    <img alt="" src="./assets/workimg/analysis_bot.png">
+                    <img alt="" src="./assets/workimg/analysis_bot.webp">
                     <h3>Analysis Bot</h3>
                     <p class="text">
                         Record discord voice online status and web backend.
@@ -244,7 +264,7 @@
                             <li>CSS</li>
                         </ul>
                     </div>
-                    <img alt="" src="./assets/workimg/website.png">
+                    <img alt="" src="./assets/workimg/website.webp">
                     <h3>Website</h3>
                     <p class="text">
                         About me <br>
@@ -262,7 +282,7 @@
                             <li>Vue.js</li>
                         </ul>
                     </div>
-                    <img alt="" src="./assets/workimg/oktw_live_records.png">
+                    <img alt="" src="./assets/workimg/oktw_live_records.webp">
                     <h3>OKTW Live Records Site</h3>
                     <p class="text">
                         Contributions: Function development.
@@ -278,7 +298,7 @@
                             <li>C#</li>
                         </ul>
                     </div>
-                    <img alt="" src="./assets/workimg/pixivwallpaperhelper.png">
+                    <img alt="" src="./assets/workimg/pixivwallpaperhelper.webp">
                     <h3>Pixiv Wallpaper Helper</h3>
                     <p class="text">
                         Contributions: Idea provision <br>
@@ -297,7 +317,7 @@
                             <li>CI/CD</li>
                         </ul>
                     </div>
-                    <img alt="" src="./assets/workimg/ON.png">
+                    <img alt="" src="./assets/workimg/ON.webp">
                     <h3>OKTW - Contributor</h3>
                     <p class="text">
                         Contributions: Plug-in, CI/CD <br>
