--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     src="https://www.gravatar.com/avatar/c571a98a7ebe76049c2a385da6d8ae0e?s=512" />
                 <h1>WoodMan</h1>
                 <p class="links">
-                    <a href="https://jw-blog.woodman.tw/"><button class="button">Blog</button></a>
+                    <a href="https://blog.lce-lab.dev/"><button class="button">LCE Blog</button></a>
                     <a href="./resume/"><button class="button">Resume</button></a>
                 </p>
                 <!-- 由 mmis1000 製作-->
