feat: update my skills and works

--- a/index.html
+++ b/index.html
@@ -68,24 +68,42 @@
         <h2>Skill</h2>
         <section class="skill">
             <div class="skill-inner">
-                <span class="iconify" data-icon="logos:html-5" data-inline="false"></span>
-                <h3>HTML</h3>
+                <span class="iconify" data-icon="healthicons:malaria-testing" data-inline="false"></span>
+                <h3>Penetration Testing</h3>
                 <p class="text">
-                    HTML is the standard markup language for documents designed to be
-                    displayed in a web browser.
+                    With years of experience and successful RCE.
                 </p>
-                <div class="progress" style="width: 70%;"></div>
+                <div class="progress" style="width: 60%;"></div>
             </div>
         </section>
         <section class="skill">
             <div class="skill-inner">
-                <span class="iconify" data-icon="logos:css-3" data-inline="false"></span>
-                <h3>CSS</h3>
+                <span class="iconify" data-icon="simple-icons:hackaday" style="color: #ff2600" data-inline="false"></span>
+                <h3>RedTeam</h3>
                 <p class="text">
-                    CSS is a style sheet language used for describing the presentation
-                    of a document written in a markup language like HTML.
+                    Experienced in recon and successfully accessing internal networks.
                 </p>
-                <div class="progress" style="width: 50%;"></div>
+                <div class="progress" style="width: 30%;"></div>
+            </div>
+        </section>
+        <section class="skill">
+            <div class="skill-inner">
+                <span class="iconify" data-icon="jam:refresh-reverse" data-inline="false"></span>
+                <h3>Reverse Engineering</h3>
+                <p class="text">
+                    Competitive experience with basic skills.
+                </p>
+                <div class="progress" style="width: 20%;"></div>
+            </div>
+        </section>
+        <section class="skill">
+            <div class="skill-inner">
+                <span class="iconify" data-icon="game-icons:earth-crack" data-inline="false"></span>
+                <h3>Pwn</h3>
+                <p class="text">
+                    Competitive experience with basic skills.
+                </p>
+                <div class="progress" style="width: 20%;"></div>
             </div>
         </section>
         <section class="skill">
@@ -93,8 +111,7 @@
                 <div class="js-icon"></div>
                 <h3>JavaScript</h3>
                 <p class="text">
-                    JavaScript is a high-level, interpreted scripting language that
-                    conforms to the ECMAScript specification.
+                    Main programming languages with years of development experience.
                 </p>
                 <div class="progress" style="width: 80%;"></div>
             </div>
@@ -104,8 +121,7 @@
                 <span class="iconify" data-icon="logos:nodejs" data-inline="false"></span>
                 <h3>Node.js</h3>
                 <p class="text">
-                    Node.js is an open-source, cross-platform, JavaScript runtime environment that executes JavaScript
-                    code outside of a browser.
+                    Main programming languages with years of development experience.
                 </p>
                 <div class="progress" style="width: 80%;"></div>
             </div>
@@ -115,10 +131,9 @@
                 <span class="iconify" data-icon="logos:python" data-inline="false"></span>
                 <h3>Python</h3>
                 <p class="text">
-                    Python is an interpreted, high-level, general-purpose programming
-                    language.
+                    Secondary programming languages with years of development experience.
                 </p>
-                <div class="progress" style="width: 50%;"></div>
+                <div class="progress" style="width: 80%;"></div>
             </div>
         </section>
         <section class="skill">
@@ -126,9 +141,9 @@
                 <span class="iconify" data-icon="logos:kotlin" data-inline="false"></span>
                 <h3>Kotlin</h3>
                 <p class="text">
-                    Kotlin is a cross-platform, statically typed, general-purpose programming language with type inference.
+                    Programming languages for plugin development with basic skills.
                 </p>
-                <div class="progress" style="width: 25%;"></div>
+                <div class="progress" style="width: 30%;"></div>
             </div>
         </section>
         <section class="skill">
@@ -136,10 +151,9 @@
                 <span class="iconify" data-icon="logos-vue" data-inline="false"></span>
                 <h3>Vue.js</h3>
                 <p class="text">
-                    Vue.js is an open-source Model–view–viewmodel JavaScript framework for
-                    building user interfaces and single-page applications.
+                    Frontend web development languages with basic skills.
                 </p>
-                <div class="progress" style="width: 35%;"></div>
+                <div class="progress" style="width: 40%;"></div>
             </div>
         </section>
         <section class="skill">
@@ -147,7 +161,7 @@
                 <span class="iconify" data-icon="logos-mongodb" data-inline="false"></span>
                 <h3>MongoDB</h3>
                 <p class="text">
-                    MongoDB is a cross-platform document-oriented database program.
+                    Main database used with several years of experience.
                 </p>
                 <div class="progress" style="width: 70%;"></div>
             </div>
@@ -157,9 +171,9 @@
                 <span class="iconify" data-icon="logos:docker" data-inline="false"></span>
                 <h3>Docker</h3>
                 <p class="text">
-                    Docker is a set of platform as a service (PaaS) products that use OS-level virtualization to deliver software in packages called containers.
+                    Several years of experience with practical application in large projects.
                 </p>
-                <div class="progress" style="width: 30%;"></div>
+                <div class="progress" style="width: 80%;"></div>
             </div>
         </section>
         <section class="skill">
@@ -167,8 +181,7 @@
                 <span class="iconify" data-icon="logos:git" data-inline="false"></span>
                 <h3>Git</h3>
                 <p class="text">
-                    Git is a distributed version-control system for tracking changes in source code during software
-                    development
+                    Several years of experience.
                 </p>
                 <div class="progress" style="width: 50%;"></div>
             </div>
@@ -178,8 +191,7 @@
                 <span class="iconify" data-icon="ic:baseline-all-inclusive" data-inline="false"></span>
                 <h3>CI / CD</h3>
                 <p class="text">
-                    CI/CD or CICD generally refers to the combined practices of continuous integration and continuous
-                    delivery.
+                    Several years of experience.
                 </p>
                 <div class="progress" style="width: 70%;"></div>
             </div>
@@ -189,35 +201,32 @@
                 <span class="iconify" data-icon="flat-color-icons:linux" data-inline="false"></span>
                 <h3>Linux</h3>
                 <p class="text">
-                    Linux is a family of open source Unix-like operating systems based on the Linux kernel.
+                    Main system used with several years of experience.
                 </p>
                 <div class="progress" style="width: 80%;"></div>
-            </div>
-        </section>
-        <section class="skill">
-            <div class="skill-inner">
-                <span class="iconify" data-icon="twemoji:triangular-flag" data-inline="false"></span>
-                <h3>Penetration Testing</h3>
-                <p class="text">
-                    A penetration test, is an authorized simulated cyberattack on a computer system, performed to evaluate the security of the system.
-                </p>
-                <div class="progress" style="width: 60%;"></div>
-            </div>
-        </section>
-        <section class="skill">
-            <div class="skill-inner">
-                <span class="iconify" data-icon="jam:refresh-reverse" data-inline="false"></span>
-                <h3>Reverse Engineering</h3>
-                <p class="text">
-                    Reverse Engineering is a process of recovering the design, requirement specifications, and functions of a product from an analysis of its code.
-                </p>
-                <div class="progress" style="width: 10%;"></div>
             </div>
         </section>
     </section>
 
     <section id="works" class="page works">
         <h2>Works</h2>
+        <section class="work">
+            <a href="https://blog.lce-lab.dev">
+                <div class="work-inner">
+                    <div class="foreground">
+                        <ul>
+                            <li>Hexo</li>
+                            <li>CloudFlare Pages</li>
+                        </ul>
+                    </div>
+                    <img alt="" src="./assets/workimg/blog-lce-lab.webp">
+                    <h3>LCE-Lab</h3>
+                    <p class="text">
+                        LCE-Lab blog website.
+                    </p>
+                </div>
+            </a>
+        </section>
         <section class="work">
             <a href="https://analysis.woodman.tw">
                 <div class="work-inner">
